--- a/css/main.css
+++ b/css/main.css
@@ -241,7 +241,7 @@
   background: #3498db;
   color: #fff;
 }
-.blue h3, html h3 {
+.blue h3 {
   background: #fff;
   color: #3498db;
   font-size: 36px;
