--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,11 @@
   padding: 5px;
 }
 
+a.active {
+  text-decoration: none;
+  border: 1px solid #888;
+}
+
 /* Slider */
 .slick-slider {
   position: relative;
